--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "homepage": "https://github.com/LambdaSchool/node-api3-project#readme",
     "dependencies": {
+        "client": "0.0.1",
+        "create-react-app": "^4.0.2",
         "express": "^4.17.1",
         "knex": "^0.21.8",
         "morgan": "^1.10.0",
